--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "nodemon": "^3.0.2",
     "sequelize": "^6.32.1"
   }
 }
